fixed: gap between line background colours

--- a/styles/output-panel.less
+++ b/styles/output-panel.less
@@ -62,4 +62,8 @@
 			}
 		}
 	}
+
+	.terminal .xterm-rows > div > span {
+		display: inline-block;
+	}
 }
